--- a/css/for-bissnes.css
+++ b/css/for-bissnes.css
@@ -1700,6 +1700,8 @@ body {
 }
 
 .top-row {
+    position: relative;
+    z-index: 3;
     min-height: 80px;
     border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
     border-top: 0.5px solid rgba(126, 131, 128, 0.6);
