--- a/css/for-bissnes.css
+++ b/css/for-bissnes.css
@@ -1647,10 +1647,16 @@ body {
 }
 
 .slider-section {
+    min-height: 600px;
+    height: -webkit-calc(100vh - 180px);
+    height: calc(100vh - 180px);
     position: relative;
 }
 
 .slider-black-fon {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
     position: absolute;
     z-index: 2;
     width: 45%;
@@ -1668,6 +1674,13 @@ body {
     bottom: 0;
 }
 
+.slider-black-fon.active {
+    background-color: black;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
 .slider-fon-item {
     width: 100%;
     height: 100%;
@@ -1683,6 +1696,7 @@ body {
 
 .slider-fon-item img {
     height: 100%;
+    width: 100%;
 }
 
 .slider-top {
@@ -1876,6 +1890,10 @@ body {
     background-color: red;
 }
 
+.slider-fon {
+    height: 100%;
+}
+
 .slider-mid .slider-fon {
     position: absolute;
     height: 100%;
@@ -1884,6 +1902,7 @@ body {
 }
 
 .slider-dots {
+    bottom: 0;
     width: 279px;
     position: absolute;
     right: 0;
@@ -1926,7 +1945,7 @@ body {
 .slide-load {
     position: absolute;
     right: 222px;
-    bottom: -9px;
+    bottom: 6px;
     background-color: #889299;
     width: 41px;
     height: 2px;
@@ -1963,6 +1982,12 @@ body {
     }
 }
 
+@media (max-width: 1199px) {
+    .slider-section {
+        height: auto;
+    }
+}
+
 @media (max-width: 992px) {
     .slider-black-fon {
         width: 50%;
@@ -1996,6 +2021,10 @@ body {
         -webkit-transition: 0s;
         -o-transition: 0s;
         transition: 0s;
+    }
+
+    .slider-fon-item img {
+        width: auto;
     }
 
     .slider .slick-active .slider_item_tittle h1 {
@@ -2050,7 +2079,7 @@ body {
     }
 
     .slider-fon-item {
-        height: 544px;
+        height: 602px;
     }
 
     .slider-fon-wrap {
