--- a/css/main.css
+++ b/css/main.css
@@ -1621,6 +1621,7 @@ body {
         -webkit-flex-direction: column;
         -ms-flex-direction: column;
         flex-direction: column;
+        padding: 30px;
     }
 
     .footer .wrap div {
