--- a/css/text-page.css
+++ b/css/text-page.css
@@ -2170,6 +2170,97 @@ body {
     color: #333333;
 }
 
+.numer-block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    color: #ffffff;
+    background-color: #ee3d40;
+    margin-bottom: 30px;
+}
+
+.numer-item {
+    width: 50%;
+    padding-right: 20px;
+    padding: 30px 20px 30px 60px;
+}
+
+.numer-item:first-child {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.numer-block .text {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.numer-block .num {
+    font-size: 80px;
+    font-weight: 600;
+}
+
+.right-content .text-title-2 {
+    padding: 30px 80px;
+}
+
+.right-content .text-title-2 h2 {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.right-content .text-title-2 p {
+    font-size: 16px;
+    color: #7a7a7a;
+}
+
+.brand-block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    overflow: hidden;
+    border-top: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.brand-block .brand-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 50%;
+    padding: 30px 0px;
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+    padding-left: 80px;
+}
+
+.brand-block .brand-item:nth-child(2n) {
+    border-right: 0;
+}
+
+.right-content .brand-item div {
+    font-size: 18px;
+    font-weight: 600;
+    max-width: 167px;
+}
+
+.right-content .brand-item img {
+    position: relative;
+    width: 40px;
+    height: auto;
+    min-width: unset;
+    margin-right: 20px;
+}
+
 @media (max-width: 1199px) {
     .work_obj_item_sub > span {
         font-size: 18px;
