--- a/css/text-page.css
+++ b/css/text-page.css
@@ -1634,6 +1634,155 @@ body {
     }
 }
 
+#myModal {
+    width: 400px;
+    height: 500px;
+    margin: 0 auto;
+    padding: 18px 9px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background: #ee3d40;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: none;
+    opacity: 0;
+    z-index: 38;
+    text-align: center;
+}
+
+#myModal .contact-form .title {
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+
+#myModal .contact-form {
+    padding: 20px;
+}
+
+#myModal .contact-form button {
+    width: 100%;
+}
+
+#myModal #myModal__close {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    cursor: pointer;
+    display: block;
+    font-size: 29px;
+}
+
+#myModal__close div {
+    width: 15px;
+    height: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 15px;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+#myModal__close div:last-child {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+#myOverlay {
+    z-index: 37;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    display: none;
+}
+
+#myModal .contact-form .title {
+    font-size: 18px;
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 25px;
+    color: #ffffff;
+}
+
+.contact-form .form-input {
+    width: 100%;
+    position: relative;
+    z-index: 2;
+}
+
+.contact-form input {
+    border: 4px solid #f15a5c;
+    background-color: #ee3d40;
+    padding: 25px 25px;
+    margin-bottom: 35px;
+    font-size: 16px;
+    width: 100%;
+    color: #ffffff;
+    position: relative;
+    z-index: 1;
+}
+
+.contact-form input::-webkit-input-placeholder {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.contact-form input::-moz-placeholder {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.contact-form input::-ms-input-placeholder {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.contact-form input::placeholder {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.contact-form button {
+    font-weight: 700;
+    background-color: #ffffff;
+    height: 80px;
+    width: 260px;
+    border: none;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    margin-bottom: 25px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    border: 4px solid #ffffff;
+}
+
+.contact-form button:hover {
+    background-color: transparent;
+    color: #ffffff;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.contact-form p {
+    font-size: 13px;
+    color: #ffffff;
+    line-height: 20px;
+    max-width: 245px;
+}
+
 .item30 {
     width: 30%;
 }
@@ -1791,6 +1940,7 @@ body {
     font-size: 36px;
     line-height: 40px;
     margin-bottom: 40px;
+    margin-top: 10px;
 }
 
 .right-content p {
@@ -2383,7 +2533,7 @@ body {
     color: #999999;
 }
 
-.accordeon__triger img {
+.accordeon__triger div:last-child img {
     margin-left: 40px;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -2397,7 +2547,7 @@ body {
     transition: 0.3s;
 }
 
-.accordeon__item.active .accordeon__triger img {
+.accordeon__item.active .accordeon__triger div:last-child img {
     -webkit-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     transform: rotate(180deg);
@@ -2449,6 +2599,94 @@ body {
     color: #ffffff;
     font-size: 16px;
     font-weight: 700;
+}
+
+.review_top {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.accordeon__triger div.review_top {
+    max-width: 80%;
+}
+
+.review_top img {
+    margin-right: 30px;
+    width: 130px;
+}
+
+.review_top span {
+    display: block;
+}
+
+.review_top span:first-child {
+    font-size: 20px;
+    color: #333333;
+    line-height: 30px;
+}
+
+.right-content .review-accordeon .accordeon__inner p {
+    max-width: 100%;
+}
+
+.review-accordeon .work_obj_more.button-arrow {
+    margin: 0;
+    padding-left: 80px;
+    padding-bottom: 30px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.review-accordeon .work_obj_more.button-arrow:hover {
+    margin-left: 10px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.sertificate__item {
+    width: -webkit-calc(100% / 3);
+    width: calc(100% / 3);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 135px;
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.sertificate {
+    border-top: 0.5px solid rgba(126, 131, 128, 0.6);
+    margin-right: -1px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+}
+
+.sertificate__item img {
+    cursor: pointer;
+    width: 70px;
 }
 
 @media (max-width: 1199px) {
@@ -2584,9 +2822,17 @@ body {
     .accordeon__inner {
         padding: 30px;
     }
+
+    .review-accordeon .work_obj_more.button-arrow {
+        padding-left: 30px;
+    }
 }
 
 @media (max-width: 767px) {
+    .right-content h1 {
+        font-size: 30px;
+    }
+
     .left-menu ul {
         padding-left: 10px;
     }
@@ -2847,6 +3093,33 @@ body {
         margin: auto;
         display: block;
     }
+
+    .review_top img {
+        margin-left: 0px;
+        margin-right: 15px;
+        width: 90px;
+    }
+
+    .review-accordeon .accordeon__triger {
+        padding: 30px;
+    }
+
+    .review_top span:first-child {
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+    .review-accordeon .work_obj_more.button-arrow {
+        padding-left: 30px;
+    }
+
+    .accordeon__triger div.review_top {
+        width: 90%;
+    }
+
+    .sertificate {
+        margin-bottom: 50px;
+    }
 }
 
 @media (max-width: 424px) {
@@ -2894,6 +3167,7 @@ body {
         font-size: 25px;
         line-height: 36px;
         margin-bottom: 25px;
+        margin-top: 10px;
     }
 
     .right-content p {
@@ -2952,6 +3226,18 @@ body {
         padding: 15px;
     }
 
+    .accordeon__triger div:last-child {
+        font-size: 12px;
+    }
+
+    .accordeon__triger div:first-child {
+        font-size: 12px;
+    }
+
+    .accordeon__triger div:last-child img {
+        margin-left: 10px;
+    }
+
     .char {
         padding: 15px;
     }
@@ -2988,5 +3274,52 @@ body {
         height: 65px;
         margin: auto;
         display: block;
+    }
+
+    .review-accordeon .accordeon__triger {
+        padding: 15px;
+    }
+
+    .review_top img {
+        width: 60px;
+    }
+
+    .review_top span:first-child {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .review-accordeon .accordeon__triger div:last-child img {
+        margin-left: 5px;
+    }
+
+    .review_top img {
+        margin-right: 10px;
+    }
+
+    .review-accordeon .work_obj_more.button-arrow {
+        padding-bottom: 15px;
+    }
+
+    .contact-form {
+        padding: 15px;
+        height: 100%;
+    }
+
+    #myModal {
+        width: 300px;
+        height: 450px;
+    }
+
+    .contact-form input {
+        padding: 15px 25px;
+    }
+
+    .contact-form button {
+        height: 55px;
+    }
+
+    #myModal .contact-form .title {
+        font-size: 18px;
     }
 }
