--- a/css/news.css
+++ b/css/news.css
@@ -1992,6 +1992,135 @@ a.news_img:hover {
     height: 100%;
 }
 
+.client-talk {
+    padding: 0 80px;
+    padding-bottom: 60px;
+    font-size: 36px;
+    font-weight: 600;
+    color: #333333;
+}
+
+.char {
+    position: relative;
+    padding: 50px 80px;
+    background-color: #fafafa;
+}
+
+.char_top {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.char_top img {
+    margin-right: 30px;
+    width: 140px;
+}
+
+.char_top div span:first-child {
+    font-size: 20px;
+    font-weight: 600;
+    max-width: 250px;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.char_top div span:last-child {
+    font-size: 14px;
+    color: #656565;
+}
+
+.char_bot p {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.char_img {
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+
+.news-list .char_bot p {
+    line-height: 22px;
+    margin-bottom: 30px;
+}
+
+.news-list .char_bot p:last-child {
+    margin-bottom: 0;
+}
+
+.news-list .char {
+    margin-bottom: 60px;
+}
+
+.sertificate__item {
+    width: -webkit-calc(100% / 3);
+    width: calc(100% / 3);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 135px;
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.sertificate {
+    border-top: 0.5px solid rgba(126, 131, 128, 0.6);
+    margin-right: -1px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 75px;
+}
+
+.sertificate__item img {
+    cursor: pointer;
+    width: 70px;
+}
+
+.portfolio_media-item img {
+    width: 100%;
+}
+
+.thumb-wrap {
+    position: relative;
+    padding-bottom: 56.25%;
+  /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+    height: 0;
+    overflow: hidden;
+    margin-bottom: 65px;
+}
+
+.thumb-wrap iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-width: 0;
+    outline-width: 0;
+}
+
 @media (max-width: 991px) {
     .news-wrap {
         width: 740px;
@@ -2000,6 +2129,18 @@ a.news_img:hover {
 
     .news-back {
         margin-left: 5px;
+    }
+
+    .char {
+        padding: 30px;
+    }
+
+    .accordeon__triger {
+        padding: 30px;
+    }
+
+    .accordeon__inner {
+        padding: 30px;
     }
 }
 
@@ -2049,6 +2190,75 @@ a.news_img:hover {
     .news .news-title_name {
         font-size: 30px;
     }
+
+    .char_img {
+        width: 40px;
+        top: 15px;
+        right: 15px;
+    }
+
+    .char_top img {
+        width: 110px;
+    }
+
+    .char_top {
+        margin-top: 30px;
+    }
+
+    .char_top div span:first-child {
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .accordeon__triger div:first-child {
+        font-size: 18px;
+    }
+
+    .accordeon__triger div:last-child {
+        font-size: 14px;
+    }
+
+    .accordeon__triger img {
+        margin-left: 20px;
+    }
+
+    .accordeon__inner button {
+        width: 150px;
+        height: 65px;
+        margin: auto;
+        display: block;
+    }
+
+    .portfolio_client:first-child {
+        padding: 30px 15px;
+    }
+
+    .portfolio_client {
+        padding: 30px 15px;
+    }
+
+    .client-talk {
+        padding: 15px;
+        margin-bottom: 30px;
+        font-size: 30px;
+    }
+
+    .portfolio_media-item {
+        margin-bottom: 30px;
+    }
+
+    .news-list .char {
+        margin-bottom: 30px;
+    }
+
+    .sertificate {
+        margin-bottom: 50px;
+    }
+
+    .news-top-title h1 {
+        font-size: 25px;
+        width: 100%;
+    }
 }
 
 @media (max-width: 424px) {
@@ -2072,5 +2282,55 @@ a.news_img:hover {
 
     .news .news_title {
         padding-top: 10px;
+    }
+
+    .accordeon__triger div:last-child {
+        font-size: 12px;
+    }
+
+    .accordeon__triger div:first-child {
+        font-size: 12px;
+    }
+
+    .accordeon__triger div:last-child img {
+        margin-left: 10px;
+    }
+
+    .char {
+        padding: 15px;
+    }
+
+    .char_top img {
+        width: 100px;
+        margin-right: 15px;
+    }
+
+    .char_top div span:first-child {
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .char_top {
+        margin-top: 45px;
+    }
+
+    .accordeon__triger {
+        padding: 15px;
+    }
+
+    .accordeon__triger div:first-child {
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .accordeon__inner {
+        padding: 15px;
+    }
+
+    .accordeon__inner button {
+        width: 150px;
+        height: 65px;
+        margin: auto;
+        display: block;
     }
 }
