--- a/css/news.css
+++ b/css/news.css
@@ -2283,6 +2283,10 @@ a.news_img:hover {
         margin-bottom: 30px;
     }
 
+    .thumb-wrap {
+        margin-bottom: 30px;
+    }
+
     .sertificate {
         margin-bottom: 50px;
     }
