--- a/css/news.css
+++ b/css/news.css
@@ -2220,6 +2220,8 @@ a.news_img:hover {
 }
 
 .portfolio_wrap {
+    position: relative;
+    z-index: 2;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -2232,6 +2234,7 @@ a.news_img:hover {
 
 .portfolio-fon {
     position: absolute;
+    z-index: 1;
     width: 60%;
     height: 100%;
     border-right: 0.5px solid rgba(126, 131, 128, 0.6);
@@ -2245,9 +2248,9 @@ a.news_img:hover {
     position: absolute;
     padding: 30px;
     height: 50%;
-    background-color: rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: -3px 72px 21px 93px rgba(0, 0, 0, 0.4);
-    box-shadow: -3px 72px 21px 93px rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 27px 82px 21px 93px rgba(0, 0, 0, 0.3);
+    box-shadow: 27px 82px 21px 93px rgba(0, 0, 0, 0.3);
 }
 
 .portfolio_item_text_text {
@@ -2322,6 +2325,83 @@ a.news_img:hover {
     margin-left: 10px;
 }
 
+.portfolio .btn-more-news {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+}
+
+.btn-more-news a {
+    position: relative;
+    z-index: 2;
+    -webkit-transition: 0.3;
+    -o-transition: 0.3;
+    transition: 0.3;
+}
+
+.btn-more-news a:hover {
+    margin-left: 10px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+@media (max-width: 1400px) {
+    .portfolio-top .item60 {
+        width: 721px;
+    }
+
+    .portfolio-fon {
+        width: 700px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .portfolio-fon {
+        display: none;
+    }
+
+    .portfolio-top .item60 {
+        border-color: transparent;
+        width: 100%;
+    }
+
+    .portfolio-top .item40 {
+        display: none;
+    }
+
+    .portfolio_item.big-img {
+        width: 100%;
+    }
+
+    .portfolio_item.small-img {
+        width: 48%;
+    }
+
+    .portfolio_item {
+        margin-right: 15px;
+        margin-bottom: 15px;
+    }
+
+    .portfolio_wrap {
+        padding-right: 65px;
+    }
+
+    .portfolio_item_text {
+        width: 100%;
+    }
+
+    .portfolio_item img {
+        -o-object-fit: cover;
+        object-fit: cover;
+    }
+
+    .portfolio_item img {
+        height: auto;
+        width: 100%;
+    }
+}
+
 @media (max-width: 991px) {
     .news-wrap {
         width: 740px;
@@ -2342,6 +2422,24 @@ a.news_img:hover {
 
     .accordeon__inner {
         padding: 30px;
+    }
+
+    .portfolio_item.big-img {
+        width: 100%;
+        margin-right: 15px;
+    }
+
+    .portfolio_item_text_text {
+        width: 100%;
+    }
+
+    .portfolio_item_text {
+        height: 40%;
+    }
+
+    .portfolio_item.small-img {
+        width: -webkit-calc(100% / 2 - 15px);
+        width: calc(100% / 2 - 15px);
     }
 }
 
@@ -2464,6 +2562,54 @@ a.news_img:hover {
         font-size: 25px;
         width: 100%;
     }
+
+    .portfolio {
+        margin-top: 70px;
+    }
+
+    .portfolio-top .item60 {
+        padding: 30px 15px;
+    }
+
+    .portfolio_title {
+        padding: 30px 15px;
+    }
+
+    .portfolio_wrap {
+        padding: 30px 15px;
+        padding-right: 0;
+    }
+
+    .portfolio_item.big-img {
+        width: 100%;
+    }
+
+    .portfolio_item_text {
+        height: 45%;
+    }
+
+    .portfolio_item_text_text {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .portfolio_item_text {
+        padding: 30px 15px;
+    }
+
+    .portfolio_item_text_text {
+        max-height: 65px;
+    }
+
+    .portfolio_title {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 600px) {
+    .portfolio_item_text {
+        height: 60%;
+    }
 }
 
 @media (max-width: 424px) {
@@ -2537,5 +2683,36 @@ a.news_img:hover {
         height: 65px;
         margin: auto;
         display: block;
+    }
+
+    .portfolio_title {
+        padding-bottom: 0;
+    }
+
+    .portfolio_item img {
+        height: 136px;
+    }
+
+    .portfolio_item_text_text {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .portfolio_item_text {
+        height: 58%;
+        padding: 5px 7px;
+    }
+
+    .portfolio_item_text .button-arrow span {
+        font-size: 14px;
+    }
+
+    .portfolio_item_text .arrow-img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .portfolio_item:hover .portfolio_item_text .button-arrow {
+        bottom: 15px;
     }
 }
