--- a/css/text-page.css
+++ b/css/text-page.css
@@ -2695,6 +2695,229 @@ body {
     width: 70px;
 }
 
+.contact {
+    margin-top: 90px;
+}
+
+.contact .item40 {
+    width: 40%;
+}
+
+.contact .item60 {
+    width: 60%;
+}
+
+.contact-mid .item40 {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    padding: 30px 80px;
+    padding-bottom: 80px;
+}
+
+.contact-mid .item60 {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    padding-bottom: 80px;
+}
+
+.contact-top {
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact .wrap {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact-top .item40 {
+    padding: 30px 80px;
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact_title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.contact_title h1 {
+    font-size: 36px;
+    font-weight: 600;
+    color: #333333;
+}
+
+.contact-mid .contact_title h1 {
+    margin-top: 20px;
+}
+
+.contact_adress {
+    font-weight: 700;
+    font-size: 20px;
+    color: #333333;
+    line-height: 30px;
+}
+
+.contact_title a {
+    color: #333333;
+    text-decoration: none;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #fce2e3;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    display: block;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.contact_title a:hover {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    border-bottom: 1px solid #ee3d40;
+}
+
+.contact_title button {
+    width: 260px;
+    height: 80px;
+    border: 0px;
+    background-color: #ee3d40;
+    font-size: 16px;
+    color: #ffffff;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.contact_title button:hover {
+    background-color: #f15a5c;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.contact_phoneimg {
+    -webkit-mask: url("../img/Phone.svg") no-repeat center;
+    mask: url("../img/Phone.svg") no-repeat center;
+    background-color: #333333;
+    width: 20px;
+    height: 20px;
+}
+
+.contact_mailimg {
+    -webkit-mask: url("../img/Mail.svg") no-repeat center;
+    mask: url("../img/Mail.svg") no-repeat center;
+    background-color: #333333;
+    width: 20px;
+    height: 20px;
+}
+
+.contact_timeimg {
+    -webkit-mask: url("../img/Time.svg") no-repeat center;
+    mask: url("../img/Time.svg") no-repeat center;
+    background-color: #333333;
+    width: 20px;
+    height: 20px;
+}
+
+.contact_row_item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.contact_row_item div {
+    margin-right: 10px;
+}
+
+.contact_row {
+    padding: 50px 80px;
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    background-color: #fafafa;
+    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+a.contact_row_item {
+    text-decoration: none;
+    color: #333333;
+}
+
+a.contact_row_item:hover {
+    text-decoration: underline;
+}
+
+.contact-mid2 .contact_title {
+    padding: 50px 80px;
+    padding-right: 60px;
+}
+
+.contact-mid2 .item40 {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact_table {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 150px;
+    font-size: 16px;
+    padding: 0px 80px;
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact_table div {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.contact-mid2 .wrap {
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.contact_table_wrap .wrap:last-child {
+    padding-bottom: 100px;
+}
+
+.contact-map {
+    height: 390px;
+}
+
 @media (max-width: 1199px) {
     .work_obj_item_sub > span {
         font-size: 18px;
@@ -2722,6 +2945,18 @@ body {
         -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
         justify-content: space-between;
+    }
+
+    .contact_title button {
+        width: 210px;
+    }
+
+    .contact_adress {
+        font-size: 16px;
+    }
+
+    .contact_table {
+        padding-right: 30px;
     }
 }
 
@@ -2831,6 +3066,47 @@ body {
 
     .review-accordeon .work_obj_more.button-arrow {
         padding-left: 30px;
+    }
+
+    .contact-top .item40 {
+        width: 50%;
+        padding: 30px;
+    }
+
+    .contact .item60 {
+        width: 50%;
+    }
+
+    .contact-mid .item40 {
+        padding: 30px;
+    }
+
+    .contact .item40 {
+        width: 50%;
+    }
+
+    .contact-map {
+        height: 350px;
+    }
+
+    .contact-mid2 .contact_title {
+        padding: 30px;
+    }
+
+    .contact-mid2 .contact_title h1 {
+        font-size: 30px;
+    }
+
+    .contact_table {
+        padding: 30px;
+    }
+
+    .contact_row {
+        padding: 30px;
+    }
+
+    .contact_row_item span {
+        font-size: 14px;
     }
 }
 
@@ -3125,6 +3401,79 @@ body {
 
     .sertificate {
         margin-bottom: 50px;
+    }
+
+    .contact {
+        margin-top: 70px;
+    }
+
+    .contact .item40 {
+        width: 100%;
+    }
+
+    .contact .wrap {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .contact-top .item60 {
+        display: none;
+    }
+
+    .contact .item60 {
+        width: 100%;
+    }
+
+    .contact-mid .contact_title h1 {
+        margin-bottom: 30px;
+    }
+
+    .contact_adress {
+        margin-bottom: 30px;
+    }
+
+    .contact_title a {
+        margin-bottom: 30px;
+    }
+
+    .contact-mid .item60 {
+        padding-bottom: 0px;
+    }
+
+    .contact_row {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: start;
+        -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+    }
+
+    .contact_row_item {
+        margin-bottom: 20px;
+    }
+
+    .contact_table {
+        height: 115px;
+    }
+
+    .contact_table_wrap .wrap:last-child {
+        padding-bottom: 0px;
+        margin-bottom: 50px;
+    }
+
+    .contact-mid2 .contact_title h1 {
+        font-size: 25px;
+    }
+
+    .page-bottom-form form h1 {
+        font-size: 20px;
     }
 }
 
