--- a/css/notfound.css
+++ b/css/notfound.css
@@ -1635,210 +1635,77 @@ body {
     }
 }
 
-.slider-section {
+.notfound {
+    margin-top: 90px;
+    min-height: -webkit-calc(100vh - 160px);
+    min-height: calc(100vh - 160px);
+}
+
+.notfound_top .item50 {
+    padding: 0px 80px;
+    height: 160px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-top: 90px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
-.slider-section {
-    min-height: 600px;
-    height: -webkit-calc(100vh - 180px);
-    height: calc(100vh - 180px);
-    position: relative;
-}
-
-.slider-black-fon {
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-    position: absolute;
-    z-index: 2;
-    width: 45%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.slider-fon-wrap {
-    z-index: 1;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    bottom: 0;
-}
-
-.slider-black-fon.active {
-    background-color: black;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}
-
-.slider-fon-item {
-    width: 100%;
-    height: 100%;
-    display: -webkit-box !important;
-    display: -webkit-flex !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-}
-
-.slider-fon-item img {
-    height: 100%;
-    width: 100%;
-}
-
-.slider-top {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-
-.slider-bot {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-
-.top-row {
-    position: relative;
-    z-index: 3;
-    min-height: 80px;
-    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+.notfound_top:last-child {
     border-top: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
-.mid-row {
-    min-height: 80px;
+.notfound .breadcrum li:before {
+    content: '/';
+    margin-right: 5px;
 }
 
-.mid-row .wrap {
-    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+.notfound_top {
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.notfound_top .wrap {
     border-left: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
-.top-row .wrap {
-    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
-    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
-}
-
-.top-row .wrap .item:first-child {
-    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
-}
-
-.mid-row .wrap .item:first-child {
-    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
-}
-
-.dec-fon {
-    position: relative;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
+.notfound_mid img {
     width: 100%;
-    height: 100%;
 }
 
-.dec-fon::before {
-    content: "";
-    display: block;
-    top: -1px;
-    position: absolute;
-    bottom: -1px;
-    right: -1px;
-    left: -1px;
-    border: 0.5px solid rgba(126, 131, 128, 0.6);
+.notfound_mid .wrap {
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
-.slider-section .breadcrum ul li.last-child {
-    color: #ffffff;
+.notfound_text {
+    padding: 50px 80px;
+    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
-.slider-section .item {
-    padding: 40px 80px;
-}
-
-.slider_item_tittle {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 40px;
-    font-weight: 600;
-    color: #ffffff;
-}
-
-.slider_item_tittle h1 {
+.notfound_text h1 {
     font-size: 56px;
-    line-height: 42px;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-color: #ffffff;
-    -webkit-text-stroke-width: 1px;
-    opacity: 0.8;
+    font-weight: 600;
+    max-width: 315px;
+    line-height: 65px;
+    margin-bottom: 45px;
 }
 
-.slider_item_tittle span {
-    font-size: 12px;
-    margin-right: 15px;
-}
-
-.slider_item_content {
-    margin-top: 66px;
-    opacity: 0;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.slider {
-    width: 100%;
-}
-
-.slider .draggable {
-    overflow: visible;
-}
-
-.slider .slick-active .slider_item_content {
-    opacity: 1;
-}
-
-.slider .slick-active .slider_item_tittle h1 {
-    -webkit-text-fill-color: #ffffff;
-    -webkit-text-stroke-width: 0px;
-    -webkit-transition: 1s;
-    -o-transition: 1s;
-    transition: 1s;
-}
-
-.slider_item_content p {
+.notfound_text p {
     font-size: 16px;
     line-height: 22px;
-    color: #ffffff;
+    margin-bottom: 50px;
 }
 
-.slider_item_content a {
-    margin-top: 60px;
+.notfound_text a {
+    width: 189px;
+    height: 81px;
     display: block;
-    margin-bottom: 20px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
+    background-color: #ee3d40;
+    color: #ffffff;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1847,316 +1714,77 @@ body {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    transition: 0.3s;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-}
-
-.slider_item_content a:hover {
-    margin-left: 10px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}
-
-.slider_item_content a span {
-    font-weight: 700;
-    font-size: 18px;
-    color: #ffffff;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     text-decoration: none;
-    margin-right: 20px;
-}
-
-.slider_item_content a:hover {
-    opacity: 0.7;
-    text-decoration: none;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
 }
 
-.slider_item {
-    padding-left: 80px;
-}
-
-.slider_item_content {
-    width: 400px;
-}
-
-.slick-dots {
-    width: 200px;
-}
-
-.slick-dots li {
-    background-color: red;
-}
-
-.slider-fon {
-    height: 100%;
-}
-
-.slider-mid .slider-fon {
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
-}
-
-.slider-dots {
-    bottom: 0;
-    width: 279px;
-    position: absolute;
-    right: 0;
-    margin-right: 80px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.slider-dots li {
-    color: #889299;
-    cursor: pointer;
-    letter-spacing: 2px;
-    margin: 0 12px;
+.notfound_text a:hover {
+    opacity: 0.9;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
-}
-
-.slider-dots .slick-active {
-    color: #ffffff;
-}
-
-.slider-dots li:nth-child(2n) {
-    margin-right: 60px;
-}
-
-.slider-dots li:hover {
-    color: #ffffff;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}
-
-.slide-load {
-    position: absolute;
-    right: 222px;
-    bottom: 6px;
-    background-color: #889299;
-    width: 41px;
-    height: 2px;
-}
-
-.slide-load.active span {
-    display: block;
-    height: 100%;
-    width: 0%;
-    background-color: #ffffff;
-    -webkit-animation-name: example;
-    animation-name: example;
-    -webkit-animation-duration: 4s;
-    animation-duration: 4s;
-}
-
-@-webkit-keyframes example {
-    from {
-        width: 0%;
-    }
-
-    to {
-        width: 100%;
-    }
-}
-
-@keyframes example {
-    from {
-        width: 0%;
-    }
-
-    to {
-        width: 100%;
-    }
 }
 
 @media (max-width: 1199px) {
-    .slider-section {
-        height: auto;
+    .notfound_text h1 {
+        font-size: 50px;
     }
 }
 
-@media (max-width: 992px) {
-    .slider-black-fon {
-        width: 50%;
+@media (max-width: 991px) {
+    .notfound_top .item50 {
+        padding: 0 30px;
+        height: 90px;
     }
 
-    .mid-row .wrap .item:first-child {
-        width: 100%;
+    .notfound_text {
+        padding: 30px;
     }
 
-    .mid-row .wrap .item:last-child {
-        width: 0;
-        padding: 0;
-    }
-
-    .top-row .wrap .item:first-child {
-        border: 0;
-    }
-
-    .slider_item {
-        width: 100% !important;
-        padding: 0 40px;
-    }
-
-    .slider_item_content {
-        opacity: 1;
-    }
-
-    .slider_item_tittle h1 {
-        -webkit-text-fill-color: #ffffff;
-        -webkit-text-stroke-width: 0px;
-        -webkit-transition: 0s;
-        -o-transition: 0s;
-        transition: 0s;
-    }
-
-    .slider-fon-item img {
-        width: auto;
-    }
-
-    .slider .slick-active .slider_item_tittle h1 {
-        -webkit-text-stroke-width: 0px;
-        -webkit-transition: 0s;
-        -o-transition: 0s;
-        transition: 0s;
-    }
-
-    .slider-section .item {
-        padding: 40px 40px;
-    }
-
-    .slider_item_tittle h1 {
-        font-size: 50px;
-    }
-
-    .slider-mid .slider-fon {
-        display: none;
-    }
-
-    .slider {
-        padding-bottom: 80px;
-    }
-
-    .slide-load {
-        bottom: 6px;
-        -webkit-transform: translateX(79px);
-        -ms-transform: translateX(79px);
-        transform: translateX(79px);
-    }
-
-    .slider-dots {
-        bottom: 0;
-        margin-right: 0;
-    }
-
-    .slider-section {
-        -webkit-background-size: 100% 100%;
-        background-size: 100% 100%;
+    .notfound_text h1 {
+        line-height: 55px;
     }
 }
 
 @media (max-width: 767px) {
-    .slider-black-fon {
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
-    }
-
-    .slider-section {
+    .notfound {
         margin-top: 70px;
     }
 
-    .slider-fon-item {
-        height: 602px;
+    .notfound_top .item50 {
+        height: auto;
+        padding: 30px;
     }
 
-    .slider-fon-wrap {
-        left: 0;
-    }
-
-    .slider-mid .slider-fon {
+    .notfound_top .item50:first-child {
         display: none;
     }
 
-    .slider_item_tittle h1 {
-        font-size: 35px;
+    .notfound .item50 {
+        width: 100%;
     }
 
-    .slider_item_content {
-        width: 350px;
+    .notfound .wrap {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
     }
 
-    .slide-load {
-        -webkit-transform: translateX(-145px);
-        -ms-transform: translateX(-145px);
-        transform: translateX(-145px);
-        left: auto;
-        right: 0;
-    }
-
-    .slider-dots {
-        -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-        transform: translateX(0);
-        left: auto;
-        right: 0;
-    }
-
-    .wrap-fluid.top-row.slider-top {
-        display: none;
-    }
-
-    .wrap-fluid.top-row.slider-bot {
-        display: none;
-    }
-}
-
-@media (max-width: 424px) {
-    .slider-fon-item {
-        height: 525px;
-    }
-
-    .slider-section {
-        min-height: 520px;
-    }
-
-    .slider_item_tittle h1 {
-        font-size: 27px;
-        line-height: 30px;
-        margin-bottom: 25px;
-    }
-
-    .slider_item_content {
-        width: 290px;
-    }
-
-    .slider_item {
-        padding: 0 20px;
-    }
-
-    .slider-section .item {
-        padding: 30px 20px;
-    }
-
-    .slider_item_content {
-        margin-top: 25px;
-    }
-
-    .slider {
-        padding-bottom: 60px;
+    .notfound_text h1 {
+        font-size: 45px;
     }
 }
